# musicplayer_slint

./: Cargo.toml
src/: lib.rs  loadfile.rs  main.rs  player.rs  player_work.rs
ui/: main.slint
ui/page/: ctrl.slint  list.slint
