[package]
name = "musicplayer_slint"
version = "0.1.0"
edition = "2021"
build = "build.rs"
[[bin]]
path = "src/main.rs"
name = "slint"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.2.2"
tokio = {version = "1.32.0",features = ["full"]}
futures = "0.3"
ffmpeg-next = "6"
rodio = "0.17.1"
serde = { version = "1", features=["derive"] }
rfd = "0.11"
walkdir = "2"

[build-dependencies]
slint-build = "1.2.0"


[profile.release]
lto = true
opt-level = 3
overflow-checks = false
strip = true
